# printree

./: AGENTS.md  Cargo.toml  ExecPlan_printree_v2.md  README.adoc  README.md  test.txt
.github/workflows/: release.yml
installer/: printree.iss
src/: main.rs
src/cli/: args.rs  mod.rs
src/core/: diff.rs  mod.rs  tree.rs  tree_gitignore.rs
src/utils/: filter.rs  mod.rs  types.rs
tests/: diff_test.sh  run_all.sh  smoke_test.sh  tree_test.sh
