[package]
name = "printree"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Cross-platform CLI to print directory trees with encoding-aware previews"
readme = "README.adoc"

[package.metadata.generate-rpm]
summary = "CLI to print directory trees with encoding-aware previews"
license = "Apache-2.0"
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/printree", dest = "/usr/bin/printree", mode = "755" },
    { source = "README.adoc", dest = "/usr/share/doc/printree/README.adoc", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/printree/LICENSE", mode = "644" },
]

[dependencies]
encoding_rs = "0.8"
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
termcolor = "1.4"
git2 = "0.18"
regex-automata = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
